# CI-Python

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: __init__.py
src/calc/: __init__.py  calc.py
tests/: __init__.py
tests/calc/: __init__.py  test_calc.py
