[project]
name = "ci-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.390",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py313"
include = [
    "pyproject.toml",
    "src/*.py",
    "src/**/*.py",
    "tests/*.py",
    "tests/**/*.py"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    #### modules
    # "ANN", # flake8-annotations
    # "COM", # flake8-commas
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    # "TID", # flake8-tidy-imports

    #### specific rules
    "E501",   # line too long
    "S101",   # assert
]

[tool.bandit]
skips = [
    "B101",
    "B108",
    "B113",
    "B311"
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore"

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "basic"

include = [
	"src",
	"tests"
]
exclude = [
	"**/node_modules",
    "**/__pycache__"
]

pythonVersion = "3.13"
pythonPlatform = "Linux"
